<resources>
    <string name="app_name">Black Box</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign out</string>

    <string name="menu_bank">Bank Accounts</string>
    <string name="menu_bank_card">Credit/Debit Cards</string>
    <string name="menu_investment">Investments</string>
    <string name="menu_liability">Liabilities</string>
    <string name="menu_payment">Payments</string>
    <string name="menu_insurance">Insurance</string>
    <string name="menu_password">Passwords</string>
</resources>