<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_bank"
                android:icon="@drawable/ic_menu_bank"
                android:title="@string/menu_bank"/>
        <item
                android:id="@+id/nav_bank_card"
                android:icon="@drawable/ic_menu_bank_card"
                android:title="@string/menu_bank_card"/>
        <item
                android:id="@+id/nav_investment"
                android:icon="@drawable/ic_menu_investment"
                android:title="@string/menu_investment"/>
        <item
                android:id="@+id/nav_liability"
                android:icon="@drawable/ic_menu_liability"
                android:title="@string/menu_liability"/>
        <item
                android:id="@+id/nav_payment"
                android:icon="@drawable/ic_menu_payment"
                android:title="@string/menu_payment"/>
        <item
                android:id="@+id/nav_password"
                android:icon="@drawable/ic_menu_password"
                android:title="@string/menu_password"/>
    </group>
</menu>